header from right add reject callback on answer problem fix add answer button mobile

--- a/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
+++ b/Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@@ -42,6 +42,7 @@
     }
 
     .add_answer{
+        width: 100%;
         border: 8px solid #c7c7ee !important;
         border-top: 0px !important;
         margin: 0;
